--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^9.2.1
 
+  # Push Notifications
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.0
+  flutter_local_notifications: ^18.0.0
+  flutter_app_badger: ^1.5.0
+
   # Utils
   intl: ^0.20.2
   path_provider: ^2.1.5
